[build-system]
requires = [
    "setuptools",
    "bayesian-optimization>=1.2.0",
    "Cython>=0.29.30",
    "numpy>=1.23.1",
    "pandas>=1.4.3",
    "python-dateutil>=2.8.2",
    "scikit-learn>=1.1.2",
    "scipy>=1.8.1",
    "seaborn>=0.12.1",
    "six>=1.16.0",
    "xgboost>=1.7.1"
    ]
build-backend = "setuptools.build_meta"

[project]
name = "skga"
version = "0.0.1"
authors = [
  { name="Leonardo Sauberman", email="leonardo.moraes@aluno.cefet-rj.br" },
  { name="João Pedro Nogueira", email="joao.carneiro@aluno.cefet-rj.br" },
  { name="Eduardo Bezerra", email="ebezerra@cefet-rj.br" },
]
description = "The python package implementing the HyperBRKGA algorithm optimizes hyperparameters of machine learning algorithms through a hybrid approach based on genetic algorithms."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/MLRG-CEFET-RJ/skga"
"Bug Tracker" = "https://github.com/MLRG-CEFET-RJ/skga/issues"